--- a/Sabbatic.xcodeproj/xcshareddata/xcschemes/Sabbatic-ios.xcscheme
+++ b/Sabbatic.xcodeproj/xcshareddata/xcschemes/Sabbatic-ios.xcscheme
@@ -52,9 +52,9 @@
       </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      savedToolIdentifier = ""
+      savedToolIdentifier = "CPU Profiler"
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
       <BuildableProductRunnable
